PyMaker/datas/object2/RawHTML/i4001/Python_DOC_referPages.assignment-within-exec-in-python.txt
<div class="post-text" itemprop="text">
<p>I am trying to build calculator using PyQt5 and I get string which I need to evaluate and assign it to a variable so that I can Pass that variable to widgets as an answer . So far I can evaluate the expression but can't assing it . How can I do that ? so far I have following code:-</p>
<pre><code># this functions gets called when Enter is pressed
def etrp(self):
    eqn =  self.sender().text()                  #I get string like '23+4'
    eqn1 = "{0} = {1}".format("global x",eqn)    #I make it x = 23+4
    x = 0
    exec(eqn1)                                   # I get error here
    print(x)
    #some code .....
</code></pre>
<p>When I try to run it without global, it runs without error but x remains 0 and If I ran it like this I get this error:-</p>
<pre><code>qt5ct: using qt5ct plugin
global x = 12+32
Traceback (most recent call last):
  File "/home/orayan/Development/Python/Calculator/calculator.py", line 11, in etrp
    exec(eqn1)
  File "&lt;string&gt;", line 1
    global x = 12+32
             ^
SyntaxError: invalid syntax
[1]    19185 abort (core dumped)  ./main.py
</code></pre>
<p>I am very new to python So can't figure out whats going on </p>
</div>
<div class="post-text" itemprop="text">
<pre><code>global x = 5
</code></pre>
<p>is not valid python code.</p>
<p>If you want to assign to a global variable <code>x</code>, you should write</p>
<pre><code>global x
x = 5
</code></pre>
<p>Try changing your code as</p>
<pre><code>global x
eqn1 = "{0} = {1}".format("x",eqn)
x = 0
exec(eqn1, globals())
</code></pre>
<p>To modify global variables with exec, you need to use <a href="https://docs.python.org/3/library/functions.html#exec" rel="nofollow noreferrer">globals()</a> function.</p>
<p>EDIT: Add globals() function. </p>
</div>
<div class="post-text" itemprop="text">
<p>Hmm, <code>exec</code> and <code>eval</code> are evil. When you use them on a non sanitized string, you implicitely accept to execute almost any Python expression...</p>
<p>But that have not exactly same usages: <code>exec</code> is meant to execute some code, while <code>eval</code> will return a value. Here the correct way would be:</p>
<pre><code>x = eval(eqn)
</code></pre>
<p>That is not a correct usage of a global variable anyway because it is only used to get a value from a call, so the correct way is to have the function to return the value, hence <code>eval</code> instead of <code>exec</code>.</p>
<p>But remember: <code>eval</code> is <em>evil</em> so <strong>never use that in production code</strong>.</p>
</div>
<span class="comment-copy">1. Please show us more of the traceback. 2. If you are new to Python, consider familiarizing yourself with the language more before using PyQt5. 3. Don't use global variables.</span>
<span class="comment-copy">@Coal_ 1. I had added complete output .2. I agree But I am very familiar with Qt in C++ thus ..</span>
<span class="comment-copy">X's value is now 0</span>
<span class="comment-copy">@orayan See my edit.</span>
